Update 'ebnfnwa1r-java-quarkus' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-e576ccdcaf.uv4e.p3.openshiftapps.com/rhtap/rhtap-qe:f8158b0e7129ec302441b57a129aebee42e4056b@sha256:2b221db561a492895878cd8c57643208206c287b1ffa6eaf5e990aa8a0079bd8

--- a/components/ebnfnwa1r-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/ebnfnwa1r-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ebnfnwa1r-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-e576ccdcaf.uv4e.p3.openshiftapps.com/rhtap/rhtap-qe:f8158b0e7129ec302441b57a129aebee42e4056b@sha256:2b221db561a492895878cd8c57643208206c287b1ffa6eaf5e990aa8a0079bd8
+          name: container-image
